# Hydra-Stretch

./: CMakeLists.txt  README.md  package.xml
config/flat/color/: flat.csv
config/flat/hydra/: frontend_config.yaml
config/flat30/color/: flat30.csv
config/flat30/hydra/: reconstruction_config.yaml
config/flat_data/hydra/: extrinsics.yaml  flat_typology.yaml  reconstruction_config.yaml
config/flat_inst/: sensor.yaml
config/flat_inst/color/: flat_coco.csv  (+1 more)
config/hydra/: stretch_typology.yaml
config/label_spaces/: coco_flat_label_space.yaml  coco_kitchen_label_space.yaml  coco_kitchen_large_objects_label_space.yaml  coco_label_space.yaml  flat30_label_space.yaml  flat_inst_label_space.yaml  flat_label_space.yaml  instances_label_space.yaml  stretch_label_space.yaml
config/rio/: sensor.yaml
config/rviz/: flat.rviz  flat_yolo.rviz  hydra_viz.rviz  stretch.rviz  stretch_amcl.rviz  stretch_astra.rviz  stretch_astra2.rviz  stretch_astra2_loc.rviz  stretch_loc.rviz  stretch_rio.rviz  stretch_yolo.rviz
config/slam_toolbox/: mapper_params_localization.yaml
config/stretch/: sensor.yaml
launch/: hydra_flat.launch  hydra_flat30.launch  hydra_flat_inst.launch  hydra_flat_yolo.launch  hydra_rio.launch  hydra_stretch.launch  hydra_stretch_rio.launch  hydra_stretch_yolo.launch  hydra_stretch_yolo_inst.launch  hydra_stretch_yolo_localization.launch  stretch_astra.launch  test.py
launch/data_source/: flat_data_pointcloud.launch
launch/slam/: slam_toolbox_localization.launch  slam_toolbox_mapping.launch
launch/visualizer/: hydra_visualizer.launch
launch_bkup/: hydra_flat_data.launch
launch_bkup/data_source/: stretch_pointcloud.launch
launch_bkup/slam/: hector_mapping.launch  slam_toolbox_mapping.launch
scripts/: play_flat_data.py  play_rio.py  play_stretch_oneformer.py  prep_output.bash
(+11 files in other folders)
